Updated footer for mobile / fixed vertical gap  issue with footer hide button / updated Media page with fancybox galleries with nav / fixed deprecated functions in fancybox jquery

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 body {			
+	/*min-height: 100vh;*/
+	/*position: relative;*/
+	/*margin-bottom: 250px;*/
 	font-family: 'Titillium Web', sans-serif;
+	/*min-height: 400px;*/
   margin-bottom: 120px;
   clear: both;
 }
@@ -7,11 +11,6 @@ body {
 h1 {
 	margin:44px 0px;
 }
-
-/*.container {*/
-/*	margin: 0 auto;*/
-/*  width: 100%;*/
-/*}*/
 
 .footer {
 	position: fixed;
@@ -253,8 +252,7 @@ li .linkButton:nth-child(4) {
 		padding: 0;
 	}
 	.navbar-collapse a.nav-link {
-		padding-top: 0px !important;
-		padding-bottom: 0px !important;
+		padding: 0px !important;
 		font-size: 60%;
 	}
 	button.navbar-toggle.collapsed {
@@ -264,9 +262,6 @@ li .linkButton:nth-child(4) {
 	.footer {
 		font-size: 70%;
 		padding: 2px 15px !important;
-	}
-	.footerLinks {
-		margin-top: 5px;
 	}
 }
 	
@@ -284,13 +279,26 @@ li .linkButton:nth-child(4) {
 
 .linkButton:hover {box-shadow:none; position:relative; top:3px;}
 
+
+
 /* MEDIA / UI Page Styles */
+
+#media img {
+	border: 3px solid hsla(0, 0%, 0%, 0.34);
+  box-shadow: -2px 2px 4px 1px rgb(20, 20, 20);
+  border-radius:15px;
+  /*padding:2px;*/
+  /*margin: 20px 0px;*/
+  min-height: 200px;
+  
+}
+
 img.wide {
-	height: 300px
+	max-height: 14em;
 }
 
 img.tall {
-	height: 400px;
+	max-height: 24em;
 }
 
 .thumbnail {
@@ -303,18 +311,21 @@ video.wide {
 	max-width: 100%;
 }
 
-#web-development img, #web-development video,
-#media img
+#web-development img, #web-development video
 {
   border: 3px solid hsla(0, 0%, 0%, 0.34);
   box-shadow: -2px 2px 4px 1px rgb(20, 20, 20);
   border-radius:15px;
-  max-height: 450px;
+  /*padding:2px;*/
+  margin: 20px 0px;
+  /*min-height: 200px;*/
+  max-height: 24em;
 }
 
 #web-development img:hover, #web-development video:hover,
 #media img:hover 
 {
+	/*border: 3px solid white;*/
 	box-shadow: 0px 0px 25px 2px #085A91;
 }
 
@@ -329,8 +340,8 @@ video.wide {
 }
 
 #web-development > [class*="col-"] {
-    margin-top: 60px;
-    margin-bottom: 30px;
+  margin-top: 60px;
+  margin-bottom: 30px;
 }
 
 .img-responsive {
@@ -344,4 +355,3 @@ video.wide {
 	  margin-bottom: 0px;
 	}
 }
-
